# bonus

./: .gitignore  LICENSE  README.md
algorithms/: positive-percent-range.js
ibd-http-extractor/: Cargo.toml  README.md
ibd-http-extractor/src/: lib.rs  opts.rs
mime/: README.md  mime.py  requirements.txt  res.json
src/: file.rs  lib.rs  opts.rs
src/file/: clean.rs
user-scripts/: F95 Random Bookmark Picker.js  F95 Random Bookmark Selector.js  README.md
